@@ -1,3 +1,7 @@
+2008-03-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* proginstall.m4: New file, with fixed AC_PROG_INSTALL.
+
 2008-02-20  Uros Bizjak  <ubizjak@gmail.com>
 
 	* mh-ppc-darwin (BOOT_CFLAGS): Use +=, not =.
