@@ -1,3 +1,8 @@
+2008-03-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* configure.ac: m4_include config/proginstall.m4.
+	* configure: Regenerate.
+
 2008-03-16  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	Backport from upstream Libtool:
